src/App.css
.App {
  text-align: center;
}

h3 {
  text-align: left;
  padding: 0;
  margin:2px;
  font-style: italic;
  color:#333;
}



.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 150px;
  padding: 20px;
  color: white;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.graph-container
{
  width:100%;
  height:100%;
}

.control-block {
  position: absolute;
  top:0;
  left:0;
}

.vis-tooltip {
  position: absolute;
  display: block;
  border: 1px solid #666;
  background: white;
  text-align: left;
  padding:3px;
}
.vis-tooltip p {
  margin:0;
  padding:0;
}

.legend p {
  text-align: left;
  padding: 0;
  margin:5px 0;
}

.charts-modal{
  width: 1500px;
  height: 100%;
  background-color: white;
  margin: 20px auto;
  padding: 30px;
  overflow: scroll;
  z-index: 998;
}

.charts-modal button{
  margin-bottom : 200px;
}


.charts-data-modal{
  width: 450px;
  height: 550px;
  background-color: white;
  margin: 20px auto;
  padding: 30px;
  overflow: scroll;
  z-index: 999;
  border: 1px solid gray;
}

.charts-data-modal textarea{
  width : 100%;
  height : 400px;
}

.italic{
  font-style: italic;
}

.charts-modal .Dropdown-root{
  margin-bottom: 20px;
}

.charts-modal .charts > div {
  display: inline-block;
  width : 33%;
}

.start-simulation-modal{
  width: 450px;
  height: 550px;
  background-color: antiquewhite;
  margin: 20px auto;
  padding: 30px;
  z-index: 997;
}

.start-simulation-modal label{
  display: block;
  margin-bottom: 10px;
}

.start-simulation-modal label span{
  float: left;
  width: 160px;
}

.start-simulation-modal button{
  margin-top: 10px;
}

.start-simulation-modal .separator{
  border-bottom: 1px solid gray;
  width:100%;
  margin-bottom:1px;
}

.start-simulation-modal input:disabled{
  background-color: #dedede;
}

